# ylands_exporter

./: .gitignore  CMakeLists.txt  README.md  blockdef_2025_02.json  export_extractor.py  extract_config.json  lookup.json  ylands_nest_scene.py
core/: README.md  config.json  extractor.py
core/from_ylands/: blockdef_2025_02.json  blockdef_2025_03.json
core/from_ylands/pretty_json/: blockdef_2025_02_pretty.json  blockdef_2025_03_pretty.json  face_scene.json  face_scene_simple_01.json  scene_ref_flat_pretty.json
core/ylands_tools/: EXPORTBLOCKDEFS.ytool  EXPORTSCENE.ytool
core/ylands_tools/yjs_format/: ExportBlockDefs.yjs
extractor2/: CMakeLists.txt  README.md  lookup.json
extractor2/src/: combomesh.cpp  combomesh.hpp  config.cpp  config.hpp  exporter.cpp  exporter.hpp  extractor.cpp  extractor.hpp  main.cpp  objload.cpp  objload.hpp  objwavefront.cpp  objwavefront.hpp  scene.cpp  scene.hpp  space.cpp  space.hpp  utils.cpp  utils.hpp  workpool.cpp  workpool.hpp  ylands.cpp  ylands.hpp
extractor2/src/winapp/: winapp.cpp  winapp.hpp
notebook/: dist_checklist.txt  todo.txt
ref_scene/: raw_ref.json  scene_ref.json  scene_ref_flat.json
src/: README.md  bmp.cpp  bmp.hpp  combomesh.cpp  combomesh.hpp  config.cpp  config.hpp  exporter.cpp  exporter.hpp  extractor.cpp  extractor.hpp  gltf.cpp  gltf.hpp  main.cpp  objwavefront.cpp  objwavefront.hpp  octree.cpp  octree.hpp  reducer.cpp  reducer.hpp  scene.cpp  scene.hpp  space.cpp  space.hpp  utils.cpp  utils.hpp  workpool.cpp  workpool.hpp  ylands.hpp
src/winapp/: winapp.cpp  winapp.hpp  yextractv2.rc
ylands_tools/: EXPORTBLOCKDEFS.ytool  EXPORTSCENE.ytool
ylands_tools/yjs_format/: ExportBlockDefs.yjs  ExportScene.yjs
